Document Metal acceleration and correct the TensorFlow Java version notes
README gains an "Apple Metal on Apple Silicon" section covering the optional
artifact, how to obtain Apple's plugin from the wheel without Python, the
--enable-native-access flag the FFM API needs, and the three caveats that
decide whether it is worth enabling: soft placement is required, coverage has
real gaps, and the win grows with model and batch size.

The GPU section no longer states that Apple GPUs are unsupported.

CLAUDE.md corrects the note on TensorFlow Java versions. It said 1.2.0 dropped
macosx-x86_64 and windows-x86_64; in fact 1.1.0 already dropped macosx-x86_64,
and 1.2.0 drops Windows on top of that. Both are now given per version, along
with why staying on 1.0.0 is what preserves all five platforms.

CHANGELOG records the new module and GpuConfiguration#allowSoftPlacement.